feat: config core

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+PANEL_PREFIX_URL=b5c7a96a30fd568667fe786eec431073ce97db
+
+AUTH_MIDDLEWARE="auth:sanctum"
+AUTH_RETRY_TIME=60
+AUTH_CODE_LIFETIME=600
+AUTH_MAX_RETRY=5
